--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>~ My Retro Blog ~</title>
-  <link rel="About Me" href="about.html">
+   <li><a href="about.html">about Me</a></li>
 
   <!-- Pixelated retro font -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
