--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <p><strong>$ cd posts</strong><br>
   <ul>
-    <li><a href="about.html">[01] Launching My Gruvbox Terminal Blog</a></li>
+    <li><a href="post_1.html">[01] Attempting LFS </a></li>
     <li><a href="#">[02] Linux, Gruvbox, and Love 🍂</a></li>
   </ul>
   </p>
